systemd System and Service Manager

   systemd (214.6-dev)
~~~~~~~
 * core:
    - use /dev/null as output if incorrect value is set;
    - use /dev/null as input if incorrect value is set;
    - don't use /dev/kmsg as output;
    - redirect stdout to terminal by default;
    - remove EXEC_OUTPUT_SYSLOG_AND_CONSOLE type output;
    - remove EXEC_OUTPUT_JOURNAL_AND_CONSOLE type output;

   systemd (214.5)
~~~~~~~
 * logind:
   - fix set_controller fail if prepare_vt fails;
   - get a fresh file descriptor to clean up a VT;
   - fix mem leak;
   - share VT-signal handler between sessions;
   - minor clean-ups;
 * units:
    - add conflict systemd-tmpfiles-setup-dev.service to shutdown.target;
    - add hostname service;
 * add /usr/lib/os-release file;
 * fix error pthread API;

   systemd (214.4)
~~~~~~~
 * journal:
    - syslog socket unit to separate module journal;
 * tmpfiles:
    - skip mknod() on -EPERM (device cgroup);
    - remove conditions from systemd-tmpfiles-setup(units);
 * bugfixes:
    - fix sd_eviocrevoke ioctl call(logind);

   systemd (214.3)
~~~~~~~
 * journal:
    - move journal man pages to separate module journal;
    - move journal.pc to separate module journal;
    - move journal completions to separate module journal;
    - move journalctl to separate module journal;
    - move journald service to separate module journal;
    - move journald to separate module journal;
    - move journal tests to separate module journal;
    - move libjournal-core to separate module journal;
    - move libjournal-internal to separate module journal;
    - move journald.conf to separate module journal;
    - move libjournal to separate module journal;
    - move journal tmpfiles to separate module journal;
    - remove journald fields from kernel-command-line man page;
 * sd-messages.h:
    - remove unused id SD_MESSAGE_MACHINE_START;
    - remove unused id SD_MESSAGE_MACHINE_STOP;
    - remove unused id SD_MESSAGE_TIMEZONE_CHANGE;